--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 .header{
 	min-height: 100vh;
 	width: 100%;
-	background-image: url("images/college.jpg"); /* fallback */
-    background-image: url("images/college.jpg"), linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)); /* W3C */
+	background-image: url("images/banner.png"); /* fallback */
+    background-image: url("images/banner.png"), linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)); /* W3C */
 	background-position: center;
 	background-size: cover;
 	position: relative;
@@ -50,7 +50,7 @@ nav img{
 }
 .text-box{
     width: 90%;
-    color: #fff;
+    color: rgb(0, 0, 0);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -63,12 +63,12 @@ nav img{
 .text-box p{
     margin: 10px 0 40 px;
     font-size: 14px;
-    color: #fff;
+    color: rgb(0, 0, 0);
 }
 .hero-btn{
     display: inline-block;
     text-decoration: none;
-    color: #fff;
+    color: rgb(0, 0, 0);
     border: 1px solid #fff;
     padding: 12px 34px;
     font-size: 13px;
